// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostEditor mapDispatchToProps calls save correctly 1`] = `
Object {
  "fetchPost": [Function],
  "pollingFetchLocation": [Function],
  "save": [Function],
  "upload": [Function],
}
`;

exports[`PostEditor mapDispatchToProps calls save correctly 2`] = `
Array [
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($id: ID
        $type: String
        $title: String
        $details: String
        $groupIds: [String]
        $startTime: Date
        $endTime: Date
        $location: String
        $locationId: ID
        $imageUrls: [String]
        $fileUrls: [String]
        $topicNames: [String]
        $memberIds: [ID]        
      ) {
        updatePost(id: $id, data: {
          type: $type
          title: $title
          details: $details
          groupIds: $groupIds
          startTime: $startTime
          endTime: $endTime
          location: $location
          locationId: $locationId
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          topicNames: $topicNames
          memberIds: $memberIds
        }) {
          
  id
  announcement
  title
  details
  type
  creator {
    id
    name
    avatarUrl
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  commentsTotal
  comments(first: 10, order: \\"desc\\") {
    items {
      id
      text
      creator {
        id
        name
        avatarUrl
      }
      attachments {
        id
        position
        type
        url
      }
      createdAt
    }
    total
    hasMore
  }
  linkPreview {
    id
    title
    url
    imageUrl
  }
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  votesTotal
  myVote
  acceptContributions
  totalContributions
  groups {
    id
    name
    slug
  }
  attachments {
    type
    url
    position
    id
  }
  postMemberships {
    id
    pinned
    group {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    total
    hasMore
    items {
      id
      name
      avatarUrl
      bio
      tagline
      location
      skills (first: 100) {
        items {
          id
          name
        }
      }
    }
  }
  eventInvitations {
    total
    hasMore
    items {
      id
      response
      person {
        id
        name
        avatarUrl
        bio
        tagline
        location
        skills (first: 100) {
          items {
            id
            name
          }
        }
      }
    }
  }
        }
      }",
        "variables": Object {
          "details": "",
          "endTime": undefined,
          "fileUrls": Array [],
          "groupIds": Array [
            1,
          ],
          "id": 1,
          "imageUrls": Array [],
          "location": undefined,
          "locationId": undefined,
          "memberIds": Array [],
          "startTime": undefined,
          "title": "a title",
          "topicNames": Array [],
          "type": undefined,
        },
      },
      "meta": Object {
        "analytics": Object {
          "detailsLength": 0,
          "eventName": "Post Updated",
        },
        "extractModel": Object {
          "append": false,
          "getRoot": [Function],
          "modelName": "Post",
        },
      },
      "type": "PostEditor/UPDATE_POST",
    },
  ],
]
`;

exports[`PostEditor mapDispatchToProps maps the action generators 1`] = `
Object {
  "fetchPost": [Function],
  "pollingFetchLocation": [Function],
  "save": [Function],
  "upload": [Function],
}
`;

exports[`PostEditor mapDispatchToProps maps the action generators 2`] = `
Array [
  Array [
    Object {
      "graphql": Object {
        "query": "query ($id: ID) {
        post(id: $id) {
          
  id
  announcement
  title
  details
  type
  creator {
    id
    name
    avatarUrl
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  commentsTotal
  
  linkPreview {
    id
    title
    url
    imageUrl
  }
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  votesTotal
  myVote
  acceptContributions
  totalContributions
  groups {
    id
    name
    slug
  }
  attachments {
    type
    url
    position
    id
  }
  postMemberships {
    id
    pinned
    group {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    total
    hasMore
    items {
      id
      name
      avatarUrl
      bio
      tagline
      location
      skills (first: 100) {
        items {
          id
          name
        }
      }
    }
  }
  eventInvitations {
    total
    hasMore
    items {
      id
      response
      person {
        id
        name
        avatarUrl
        bio
        tagline
        location
        skills (first: 100) {
          items {
            id
            name
          }
        }
      }
    }
  }
        }
      }",
        "variables": Object {
          "id": 1,
        },
      },
      "meta": Object {
        "afterInteractions": true,
        "extractModel": "Post",
        "extractQueryResults": Object {
          "getItems": [Function],
          "getType": [Function],
        },
      },
      "type": "FETCH_POST",
    },
  ],
]
`;

exports[`PostEditor mapStateToProps maps 1`] = `
Object {
  "canModerate": true,
  "fileUrls": Array [],
  "groupOptions": Array [
    Object {
      "id": "7",
    },
  ],
  "imageUrls": Array [
    "bar.png",
    "foo.png",
  ],
  "isNewPost": true,
  "isProject": false,
  "pendingDetailsText": false,
  "post": Object {
    "commenters": Array [],
    "creator": Object {
      "id": "10",
    },
    "fileAttachments": Array [],
    "fileUrls": Array [],
    "groups": Array [
      Object {
        "id": "7",
      },
      Object {
        "id": "8",
      },
    ],
    "id": "1",
    "imageUrls": Array [
      "bar.png",
      "foo.png",
    ],
    "linkPreview": undefined,
    "members": Array [],
    "pinned": undefined,
    "topics": Array [],
  },
}
`;
